src/rds-no-public-db-access-good.tf
 resource "aws_db_instance" "good_example" {
    publicly_accessible = false
 }
